"Fix" waybar stretching with weird unicode characters in window title
With strange tall unicode characters like ࿔, the waybar could stretch vertically and push the windows near it lower.
This interaction feels very terrible and looks like crap, so this hack prevents the bar from growing any taller. This does push the text up to the top of the waybar still whenever an unusually tall character is present, but its better than the whole bar suddenly growing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -315,3 +315,7 @@ background: rgba(0, 0, 0, 0.2);
 #scratchpad.empty {
 background-color: transparent;
 }
+
+#window {
+margin-top: -50px; margin-bottom: -50px
+}
